fixes for the menu on mobiles

--- a/css/donut.css
+++ b/css/donut.css
@@ -569,7 +569,7 @@ table .table {
 }
 
 .navbar-toggle {
-  margin-left: 8px;
+  margin-left: 0px;
   margin-right: 0px;
   float: left !important;
   float: left;
@@ -1243,7 +1243,7 @@ img {
   .nav-title {
     display: inline-block;
     line-height: 56px;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: bold;
     color: #ffffff;
   }
